fix wrong fonts array in SC

--- a/sources/easygenerator.Web/Templates/Simple course/css/fonts.css
+++ b/sources/easygenerator.Web/Templates/Simple course/css/fonts.css
@@ -2,10 +2,10 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url(../fonts/MaterialIcons-Regular.woff?v=1460971829616); /* For IE6-8 */
+  src: url(../fonts/MaterialIcons-Regular.woff?v=1461051657864); /* For IE6-8 */
   src: local('Material Icons'),
        local('MaterialIcons-Regular'),
-       url(MaterialIcons-Regular.woff?v=1460971829616) format('woff'),
+       url(MaterialIcons-Regular.woff?v=1461051657864) format('woff'),
 }
 
 .material-icons {
